--- a/explorebs.css
+++ b/explorebs.css
@@ -1,15 +1,4 @@
 @charset "UTF-8";
-/*!
-* Start Bootstrap - Creative v7.0.7 (https://startbootstrap.com/theme/creative)
-* Copyright 2013-2023 Start Bootstrap
-* Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-creative/blob/master/LICENSE)
-*/
-/*!
- * Bootstrap  v5.2.3 (https://getbootstrap.com/)
- * Copyright 2011-2022 The Bootstrap Authors
- * Copyright 2011-2022 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
- */
  
 :root {
   --bs-blue: #0d6efd;
@@ -10927,6 +10916,16 @@ hr.divider-light {
   }
   #mainNav.navbar-shrink .navbar-nav .nav-item .nav-link:hover {
     color: #f4623a;
+  }
+}
+.text-responsive {
+  font-size: 90px;
+}
+
+/* Media query for screens with a maximum width of 400px */
+@media (max-width: 400px) {
+  .text-responsive {
+    font-size: 60px; /* Adjust the font size for smaller screens */
   }
 }
 
